tests/errors/ElabLocation.hs
import Data.Ratio 

{- foo :: {v:Ratio Int | v /= 0} -> Bool @-}
foo :: Ratio Int -> Bool
foo x = y == y 
  where 
    y = 10 / x
